# nwg-displays

./: .gitignore  flake.nix  pyproject.toml  setup.py
.direnv/: flake-profile-11-link  flake-profile-2-link  flake-profile-3-link  flake-profile-4-link
nwg_displays/: configuration_service.py  logger.py  main.py  test.py  tools.py  vocabulary_service.py
nwg_displays/arguments/: argument_parser_factory.py
nwg_displays/config/: nwg_displays_config.py
nwg_displays/display/: button.py
nwg_displays/gui/: drag.py  draggable_monitor_button.py  languages.py  monitor_button.py  monitor_button_indicator.py  monitor_configuration_form_view.py  monitor_form_manager.py
nwg_displays/gui/form/: adjustment_form.py  base_form.py  boolean_form.py  configuration_form_view.py  form.py  monitor_adjustment_form_view.py  monitor_configuration_form_controller.py  monitor_configuration_form_view.py  monitor_modes_form_view.py  text_form.py
nwg_displays/hyprland/: hyprctl.py
nwg_displays/langs/: en_US.json
nwg_displays/monitor/: backend.py  monitor.py  monitor_base_configuration.py  monitor_mode.py  monitor_service.py  monitor_transform_mode.py
nwg_displays/monitor/hyprland/: hyprland_monitor.py  hyprland_monitor_mode.py  hyprland_monitor_service.py
nwg_displays/monitor/sway/: sway_monitor.py  sway_monitor_mode.py  (+1 more)
nwg_displays/profile/: manager.py
nwg_displays/session/: session_service.py  session_type.py
nwg_displays/ui/: indicator.py  profile_dialog.py
nwg_displays/workspace/: workspace.py
nwg_displays/workspace_rule/: workspace_rule.py  workspace_rule_service.py
(+8 files in other folders)
